syntax = "proto3";

option csharp_namespace = "server";

package account;

service Account{
	rpc Login(LoginRequest) returns (LoginResponse);
	rpc Register(RegisterRequest) returns (RegisterResponse);
	rpc GenerateActivationCode(GenerateActivationCodeRequest) returns (GenerateActivationCodeResponse);
}

message LoginRequest{
	string username = 1;
	string password = 2;
}

message LoginResponse{
	bool success = 1;
	string message = 2;
	string jwt_token = 3;
}

message RegisterRequest{
	string username = 1;
	string password = 2;
	string activation_code = 3;
}

message RegisterResponse{
	bool success = 1;
	string message = 2;
}

message GenerateActivationCodeRequest{
	int32 number = 1;
}

message GenerateActivationCodeResponse{
	bool success = 1;
	string message = 2;
	string activation_code = 3;
}
